--- a/bower.json
+++ b/bower.json
@@ -2,8 +2,9 @@
 	"name": "angular",
 	"version": "1.0.0",
 	"dependencies": {
-		"bootstrap": "latest",
+		"bootstrap": "~3.3.5",
 		"angular": "latest",
-		"angular-route": "latest"	
+		"angular-route": "latest",
+		"angular-ui-router": "~0.2.15"	
 	}
 }
