--- a/package.json
+++ b/package.json
@@ -2,10 +2,12 @@
   "name": "starter-node-angular",
   "main": "server.js",
   "dependencies": {
-    "express" : "~4.5.1",
-	"mongoose" : "~3.8.0",
-	"body-parser" : "~1.4.2",
-	"method-override" : "~2.0.2"
+    "angular": "^1.5.0-beta.0",
+    "angular-ui-router": "^0.2.15",
+    "body-parser": "~1.4.2",
+    "bootstrap": "^3.3.5",
+    "express": "~4.5.1",
+    "method-override": "~2.0.2",
+    "mongoose": "~3.8.0"
   }
 }
-
